  of an object within a subtree of the topology.
* Add a CPUModel info attribute to Socket objects on Linux on most architectures.
* Backend documentation enhancements.
* lstopo -v -p now displays distance matrices with physical indexes.
* Add hwloc-distances utility to list distances.
* Add more NVIDIA CUDA helpers in cuda.h and cudart.h to find hwloc objects
  corresponding to CUDA devices.


Version 1.3.0
-------------
* Major features
  + Add I/O devices and bridges to the topology using the pciutils
    library. Only enabled after setting the relevant flag with
    hwloc_topology_set_flags() before hwloc_topology_load(). See the
    I/O Devices section in the documentation for details.
* Discovery improvements
  + Add associativity to the cache attributes.
  + Add support for s390/z11 "books" on Linux.
  + Add the HWLOC_GROUPING_ACCURACY environment variable to relax
    distance-based grouping constraints. See the Environment Variables
    section in the documentation for details about grouping behavior
    and configuration.
  + Allow user-given distance matrices to remove or replace those
    discovered by the OS backend.
* XML improvements
  + XML is now always supported: a minimalistic custom import/export
    code is used when libxml2 is not available. It is only guaranteed
    to read XML files generated by hwloc.
  + hwloc_topology_export_xml() and export_xmlbuffer() now return an
    integer.
  + Add hwloc_free_xmlbuffer() to free the buffer allocated by
    hwloc_topology_export_xmlbuffer().
  + Hide XML topology error messages unless HWLOC_XML_VERBOSE=1.
* Minor API updates
  + Add hwloc_obj_add_info to customize object info attributes.
* Tools
  + lstopo now displays I/O devices by default. Several options are
    added to configure the I/O discovery.
  + hwloc-calc and hwloc-bind now accept I/O devices as input.
  + Add --restrict option to hwloc-calc and hwloc-distribute.
  + Add --sep option to change the output field separator in hwloc-calc.