@@ -45,6 +45,7 @@ Version 1.4.0
 * Add hwloc-distances utility to list distances.
 * Add more NVIDIA CUDA helpers in cuda.h and cudart.h to find hwloc objects
   corresponding to CUDA devices.
+* Add NVIDIA CUDA device detection.
 
 
 Version 1.3.0
